--- a/app/assets/stylesheets/components/_card-case.scss
+++ b/app/assets/stylesheets/components/_card-case.scss
@@ -46,12 +46,14 @@ ul{
   padding-left: 15px;
   padding-right: 15px;
   margin-top: 0px;
-  // position: absolute;
   top: 50px;
     h2{
       font-family: 'Montserrat', sans-serif;
       font-size: 20px;
       font-weight: 700;
+      overflow-y: hidden;
+      text-overflow: ellipsis;
+      max-height: 3em;
     }
     p{
       font-family: 'Montserrat', sans-serif;
@@ -59,7 +61,7 @@ ul{
       font-weight: 400;
       overflow-y: hidden;
       text-overflow: ellipsis;
-      max-height: 4.6em;
+      max-height: 2.6em;
       color: #374A59;
     }
 }
