--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -27,7 +27,7 @@
           </div>
           <div class="card-main-infos">
               <!-- should show case title-->
-            <h2>Case <%= c.id %> : <%= c.title %></h2>
+            <h2><%= c.title %></h2>
             <p><%= c.description %></p>
           </div>
           <div class="card-bottom-infos">
