--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -1,3 +1,15 @@
+<div class="small-banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url('<%= cl_image_path "pexels-tima-miroshnichenko-5407212_nwdzks", crop: :fill %>')">
+  <div class="container">
+    <div>
+      <div class="small-banner-text col-md-8">
+        <h2>CASE</h2>
+        <h1 class="banner-title"><%= @case.title %></h1>
+        <a href="#medical-report-anchor">Medical report</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
 
   <div class="d-flex justify-content-between my-3">
